Tue Oct 09 15:10:00 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: If pylab isn't available, don't call the
	  analyse_* functions (and don't produce pretty graphs, as a
	  result).

Tue Oct 09 14:55:53 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* README,docs/introduction.rst: Update comments about the version
	  of Xapian which is required.

Tue Oct 09 02:14:24 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/running_perftest.txt: More instructions.

Tue Oct 09 02:05:03 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* docs/running_perftest.txt: Add some notes on running the
	  performance tests, with wikipedia data.

Tue Oct 09 01:48:58 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/perftest.py: More tidying, ready for running big tests
	  against wikipedia.

Tue Oct 09 01:32:43 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/searcher.py: Tidy up headings.

Tue Oct 09 01:21:38 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/: Sort out search side of performance tests.

Mon Oct 08 23:46:18 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* perftest/: Tidy up, towards making automated performance tests
	  runnable just by running a single script.  Fix graph drawing for
	  cases where there are few sample points.

Mon Oct 08 14:22:25 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* AUTHORS: Add second name for Bruno Rezende.

Sun Oct 07 01:56:47 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Change from using OP_MULT_WEIGHT to
	  use OP_SCALE_WEIGHT, to work with latest version of xapian.

Sat Oct 06 01:55:34 BST 2007  Richard Boulton <richard@lemurconsulting.com>

	* MANIFEST.in,eggsetup.py,setup.py: Basic start of distutils
	  packaging.

Wed Oct 03 14:00:17 BST 2007  Richard Boulton <richard@lemurconsulting.com>
