@@ -1,3 +1,9 @@
+Tue Oct 09 15:36:32 BST 2007  Richard Boulton <richard@lemurconsulting.com>
+
+	* perftest/perftest.py: Add "--usedb" parameter - if supplied, a
+	  ready made DB is assumed to be at that path, and no index run
+	  will be done.
+
 Tue Oct 09 15:10:00 BST 2007  Richard Boulton <richard@lemurconsulting.com>
 
 	* perftest/perftest.py: If pylab isn't available, don't call the
